// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders call-to-actions button correctly 1`] = `
<button
  className="fd-button-cta"
/>
`;

exports[`Button renders call-to-actions button correctly 2`] = `
<button
  className="fd-button-cta m"
/>
`;

exports[`Button renders call-to-actions button correctly 3`] = `
<button
  className="fd-button-cta l"
/>
`;

exports[`Button renders editorial buttons correctly 1`] = `
<button
  className="fd-button"
/>
`;

exports[`Button renders editorial buttons correctly 2`] = `
<button
  className="fd-button m"
/>
`;

exports[`Button renders editorial buttons correctly 3`] = `
<button
  className="fd-button l"
/>
`;
